chore: documentação de código para clonar e replicar ambiente
